--- a/package.json
+++ b/package.json
@@ -4,18 +4,11 @@
   "private": true,
   "homepage": "https://edouardmisset.github.io/portfolio/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
-    "bluebird": "^3.7.2",
     "gh-pages": "^3.1.0",
-    "npm-run-all": "^4.1.5",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^0.2.4"
+    "react-dom": "^17.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,7 +19,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
     "lint:fix": "eslint --fix ./src",
-    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md|vue)\""
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md|vue)\"",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -56,13 +50,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.3.0",
     "prettier": "^2.1.2",
-    "typescript": "^4.1.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn run format && yarn run lint:fix"
-    }
+    "typescript": "^4.1.2",
+    "husky": "^6.0.0"
   }
 }
