--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gh-pages": "^3.1.0",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,8 +51,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^6.0.0",
     "prettier": "^2.1.2",
-    "typescript": "^4.1.2",
-    "husky": "^6.0.0"
+    "typescript": "^4.1.2"
   }
 }
